--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -82,7 +82,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
     const errors = {
         INVALID_PUZZLE: 'Sorry, this puzzle isn\'t valid! Double-check your given digits.',
-        SERVER_ERROR: 'Sorry, something went wrong! Try again.'
+        SERVER_ERROR: 'Sorry, something went wrong! Please try again.'
     }
     const happyMessages = {
         GREAT_JOB: 'Great job. You solved the puzzle!',
