--- a/play/static/css/play_styles.css
+++ b/play/static/css/play_styles.css
@@ -194,12 +194,44 @@ a.game-control {
     border-radius: 5px;
     margin-right: 20px;
     margin-top: 20px;
-    width: 75px;
     height: 75px;
+    width: 75px;
+}
+
+a.game-control.button {
+    padding: 0 14px;
+    color: white;
+    text-decoration: none;
+    line-height: 70px;
+    font-size: 2.1em;
+    font-weight: 300;
+    width: auto;
 }
 
 a.game-control.selected {
     border-color: #FFFFFF;
+}
+
+a.game-control.button.primary {
+    color: #050A1C;
+    font-weight: 500;
+}
+
+a#cancel-puzzle-gen {
+    display: none;
+    position: absolute;
+    left: 420px;
+    top: -10px;
+    height: 50px;
+    line-height: 48px;
+}
+
+a#play-button {
+    display: none;
+}
+
+a#cancel-button {
+    display: none;
 }
 
 #game-controls {
